--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
@@ -4,6 +4,15 @@
     <h2>{% block title %}{{ object }}{% endblock %}</h2>
 {% endblock masthead %}
 
+{% block extra_buttons %}
+    {% if perms.nautobot_device_lifecycle_mgmt.add_softwareimagelcm and active_tab == 'software-images' %}
+        <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:softwareimagelcm_add' %}?software={{ object.pk }}" class="btn btn-success">
+            <span class="mdi mdi-plus-thick" aria-hidden="true"></span>
+            Add a Software Image
+        </a>
+    {% endif %}
+{% endblock extra_buttons %}
+
 {% block extra_nav_tabs %}
     <li role="presentation"{% if active_tab == 'software-images' %} class="active"{% endif %}>
         <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:software_software_images' pk=object.pk %}">Software Images <span class="badge">{{ object.get_software_images.count }}</span></a>
