Removed tables extra code and renamed to hashing

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm.html
@@ -50,10 +50,10 @@
                 </td>
             </tr>
             <tr>
-                <td>Hash Algorithm</td>
+                <td>Hashing Algorithm</td>
                 <td>
-                {% if object.hash_algorithm %}
-                    <p class="break-word">{{ object.hash_algorithm }}</p>
+                {% if object.hashing_algorithm %}
+                    <p class="break-word">{{ object.hashing_algorithm }}</p>
                 {% else %}
                     <span class="text-muted"></span>&mdash;</span>
                 {% endif %}
