Add Hashing Algorithm field to Software Image Model (#166)
* Add Hashing Algorithm field to Software Image Model

---------

Co-authored-by: Zack Tobar <zack.tobar@networktocode.com>

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm.html
@@ -50,6 +50,16 @@
                 </td>
             </tr>
             <tr>
+                <td>Hashing Algorithm</td>
+                <td>
+                {% if object.hashing_algorithm %}
+                    <p class="break-word">{{ object.hashing_algorithm }}</p>
+                {% else %}
+                    <span class="text-muted"></span>&mdash;</span>
+                {% endif %}
+                </td>
+            </tr>
+            <tr>
                 <td>Default Image</td>
                 <td>
                 {% if object.default_image is True %}
