--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareimagelcm_edit.html
@@ -12,6 +12,7 @@
             {% render_field form.software %}
             {% render_field form.download_url %}
             {% render_field form.image_file_checksum %}
+            {% render_field form.hashing_algorithm %}
             {% render_field form.default_image %}
         </div>
     </div>
