--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_software_images.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_software_images.html
@@ -1,4 +1,5 @@
-{% extends 'nautobot_device_lifecycle_mgmt/softwarelcm.html' %}
+{% extends 'nautobot_device_lifecycle_mgmt/softwarelcm_retrieve.html' %}
+{% load helpers %}
 
 {% block title %}{{ block.super }} - Software Images{% endblock %}
 
