--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
@@ -10,7 +10,7 @@
         <span class="mdi mdi-plus-thick" aria-hidden="true"></span>Execute<span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
-            <li><a href="{% url 'extras:job' class_path='nautobot_device_lifecycle_mgmt.jobs.lifecycle_reporting.DeviceSoftwareValidationFullReport' %}">Run Software Validation</a></li>
+            <li><a href="{% url 'extras:job_run_by_class_path' class_path='nautobot_device_lifecycle_mgmt.jobs.lifecycle_reporting.DeviceSoftwareValidationFullReport' %}">Run Software Validation</a></li>
     </ul>
 </div>
 {% if request.user.is_authenticated and table_config_form %}
