Move cve to soft and contract to device relationships to m2m fields.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/contractlcm_retrieve.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/contractlcm_retrieve.html
@@ -49,6 +49,14 @@
                 <td>{% if object.contract_type %} {{ object.contract_type }} {% else %} &mdash; {% endif %}</td>
             </tr>
             <tr>
+                <td>Devices</td>
+                <td>
+                    {% for device in object.devices.all %}
+                    <a href="{% url 'dcim:device' pk=device.pk %}">{{ device }}</a>{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
                 <td>Comments</td>
                 <td>{% if object.comments %}<pre>{{ object.comments|placeholder  }}</pre>{% else %} &mdash; {% endif %}</td>
             </tr>
