--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
@@ -87,7 +87,7 @@
                             </a>
                         </td>
                         <td>
-                            <a href="/plugins/nautobot-device-lifecycle-mgmt/device-validated-software-result/?export" 
+                            <a href="/api/plugins/nautobot-device-lifecycle-mgmt/device-validated-software-result/?format=csv"
                                 class="btn btn-default btn-xs" title="Export data for all device types" aria-hidden="true"> 
                                 <i class="mdi mdi-download"></i>
                             </a>
